cmss/main/default/objects/EventSync__c/EventSync__c.object-meta.xml
<CustomObject>
    <description>Queable object for Event synchronisation with Google Calendar</description>
    <label>Event Sync</label>
    <nameField>
        <displayFormat>ES-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Event Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Syncs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>