cmss/main/default/objects/EventSync__c/fields/ChangeFromGoogle__c.field-meta.xml
<CustomField>
    <fullName>ChangeFromGoogle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change From Google</label>
    <type>Checkbox</type>
</CustomField>