cmss/main/default/objects/EventSync__c/fields/GoogleEventId__c.field-meta.xml
<CustomField>
    <fullName>GoogleEventId__c</fullName>
    <externalId>true</externalId>
    <label>Google Event Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>