cmss/main/default/objects/EventSync__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>