cmss/main/default/objects/EventSync__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>