cmss/main/default/objects/EventSync__c/fields/IsTask__c.field-meta.xml
<CustomField>
    <fullName>IsTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Task</label>
    <type>Checkbox</type>
</CustomField>