cmss/main/default/objects/EventSync__c/fields/SFEventId__c.field-meta.xml
<CustomField>
    <fullName>SFEventId__c</fullName>
    <label>SF Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>