cmss/main/default/objects/EventSync__c/fields/SFTaskId__c.field-meta.xml
<CustomField>
    <fullName>SFTaskId__c</fullName>
    <label>SF Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>